[tool.poetry]
name = "hindsite"
version = "0.1.0"
description = "static site generator"
authors = ["navanchauhan <hindsite@navan.email>"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
